[project]
name = "phoebe-pose"
version = "0.1.0"
description = "Generate images of Phoebe"
readme = "README.md"
authors = [
    { name = "zku" }
]
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.9.0",
    "ruff>=0.11.4",
    "streamlit>=1.44.1",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "D", "I"]
ignore = ["D203", "D213"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
